--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.14",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
@@ -24,15 +25,14 @@
     "react-gesture-handler": "^0.0.5",
     "react-native": "0.70.8",
     "react-native-autocomplete-dropdown": "^2.1.0",
+    "react-native-get-location": "^3.0.1",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-native-get-location": "^3.0.1",
-    "expo-location": "~15.0.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
