--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-autocomplete-dropdown": "^2.1.0",
     "react-native-get-location": "^3.0.1",
     "react-native-paper": "5.0.0-rc.10",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
