--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/itim": "^0.2.3",
+    "@expo-google-fonts/lato": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.1.7",
@@ -15,6 +17,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.14",
+    "expo-font": "^11.1.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.5",
