--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.70.8",
     "react-native-autocomplete-dropdown": "^2.1.0",
     "react-native-get-location": "^3.0.1",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
